# time_capsule

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  bandit.yaml  chromedriver  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  useful_tips.md
.github/workflows/: main.yml
playlist_creation/: admin.py  apps.py  forms.py  middleware.py  models.py  services.py  views.py
playlist_creation/migrations/: 0001_initial.py  0002_auto_20210509_0746.py  0002_create_privacy_policy_flatpage.py  0003_auto_20210516_1400.py
playlist_creation/static/playlist_creation/: style.css
playlist_creation/templates/: base.html  home.html  thank_you.html
playlist_creation/tests/: pages.py  test_create_playlist_create_songs.py  test_create_playlist_request.py  test_e2e_create_playlist.py  test_full_flow.py  test_general_requests.py
time_capsule/: asgi.py  settings.py  urls.py  wsgi.py
time_capsule/settings/: __init__.py  base.py  local.py  production.py  staging.py
