[tool.poetry]
name = "time_capsule"
version = "0.1.0"
description = ""
authors = ["Arnon Cohen <arnon.cohen@mail.huji.ac.il>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.3.4"
attrs = "21.2.0"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
cryptography = "3.4.7"
defusedxml = "0.7.1"
Django = "3.2.2"
django-environ = "0.4.5"
h11 = "0.12.0"
httpcore = "0.12.3"
httpx = "0.17.1"
idna = "2.10"
iniconfig = "1.1.1"
oauthlib = "3.1.0"
packaging = "20.9"
pluggy = "0.13.1"
py = "1.10.0"
pycparser = "2.20"
PyJWT = "2.1.0"
pylast = "4.2.1"
pyparsing = "2.4.7"
python3-openid = "3.2.0"
pytz = "2021.1"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.2.0"
social-auth-app-django = "4.0.0"
social-auth-core = "4.1.0"
sqlparse = "0.4.1"
tekore = "3.7.1"
toml = "0.10.2"
urllib3 = "1.26.4"
psycopg2 = "^2.8.6"
gunicorn = "20.1.0"
whitenoise = "5.2.0"
django_basicauth = "0.5.3"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
pytest = "6.2.4"
pytest-django = "4.3.0"
pytest-mock = "3.6.1"
pylama = "^7.7.1"
bandit = "^1.7.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
